# MACE

./: .gitignore  README.md  pyproject.toml  setup_environment.ps1
notebooks/: 01_data_and_graphs.ipynb  02_basis_functions.ipynb  03_message_passing.ipynb  04_mace_architecture.ipynb  05_energy_force_training.ipynb  06_evaluation.ipynb
src/: __init__.py  basis.py  blocks.py  data.py  model.py  training.py  utils.py
tests/: test_autograd.py  test_equivariance.py
