[project]
name = "mace-pedagogical"
version = "0.1.0"
description = "A pedagogical implementation of the MACE interatomic potential."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
    "e3nn>=0.5.1",
    "ase>=3.22.1",
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
